# fooddb-jp

./: .env.example  .gitignore  LICENSE  README.md  README_ja.md  api.py  mcp_server.py  pyproject.toml
docs/: ARCHITECTURE.md
scripts/: build_aliases.py  build_nutrient_master.py  convert.py  convert_all.py  migrate_food_names.py  quality_check.py  test_food_name_parse.py
scripts/legacy/: convert_table_all.py  food_metadata.py  generate_header_full.py  xlsx_to_jsonl.py
static/: index.html
